--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Maaz Muhammad Khan | Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="logo.svg" />
     <link rel="shortcut icon" href="/logo.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/logo.svg" />
     <base href="/" />
